--- a/Resources/Private/Language/it.locallang_be.xlf
+++ b/Resources/Private/Language/it.locallang_be.xlf
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file source-language="en" target-language="it" datatype="plaintext" original="EXT:fp_newsletter/Resources/Private/Language/locallang_be.xlf" date="2022-07-26T16:03:30Z" product-name="fp_newsletter">
+	<file source-language="en" target-language="it" datatype="plaintext" original="EXT:fp_newsletter/Resources/Private/Language/locallang_be.xlf" date="2021-05-27T09:59:17Z" product-name="fp_newsletter">
 		<header/>
 		<body>
 			<trans-unit id="title" resname="title">
 				<source>Newsletter-subscriber-settings</source>
 				<target>Settings per la newsletter</target>
-			</trans-unit>
-			<trans-unit id="startingPoint" resname="startingPoint">
-				<source>Startingpoint</source>
-				<target>Punto di partenza</target>
 			</trans-unit>
 			<trans-unit id="template" resname="template">
 				<source>HTML-template:</source>
@@ -42,10 +38,6 @@
 			<trans-unit id="template.unsubscribeVerify" resname="template.unsubscribeVerify">
 				<source>Newsletter: verify unsubscription</source>
 				<target>Newsletter: verifica la revoca della iscrizione</target>
-			</trans-unit>
-			<trans-unit id="template.resend" resname="template.resend">
-				<source>Newsletter: resend verification email</source>
-				<target>Newsletter: invia nuovamente l'e-mail di verifica</target>
 			</trans-unit>
 			<trans-unit id="template.list" resname="template.list">
 				<source>List view: all actions</source>
@@ -120,8 +112,8 @@
 				<target>Mostra un honeypot?</target>
 			</trans-unit>
 			<trans-unit id="settings.searchPidMode" resname="settings.searchPidMode">
-				<source>Search address (in tt_address/fe_users) in all specified folders?</source>
-				<target>Cerca indirizzo in tt_address/fe_users in tutte le cartelle specificate?</target>
+				<source>Search address in tt_address in all specified folders?</source>
+				<target>Cerca indirizzo in tt_address in tutte le cartelle specificate?</target>
 			</trans-unit>
 			<trans-unit id="settings.deleteMode" resname="settings.deleteMode">
 				<source>Hard or soft delete mode?</source>
@@ -152,20 +144,12 @@
 				<target>Abilitare le email di conferma all'utente?</target>
 			</trans-unit>
 			<trans-unit id="settings.dontAppendL" resname="settings.dontAppendL">
-				<source>Add language UID to email templates?</source>
-				<target>Aggiungere l'UID della lingua ai modelli di posta elettronica?</target>
-			</trans-unit>
-			<trans-unit id="settings.dmUnsubscribeMode" resname="settings.dmUnsubscribeMode">
-				<source>Direct mail unsubscribe mode: direct unsubscribe (no) or go to the unsubscribe page (yes)?</source>
-				<target>Direct mail modalità di annullamento dell'iscrizione: disiscrizione diretta (no) o vai alla pagina di annullamento dell'iscrizione (si)?</target>
+				<source>Aggiungere l'UID della lingua ai modelli di posta elettronica?</source>
+				<target>Abilitare le email di conferma all'utente?</target>
 			</trans-unit>
 			<trans-unit id="settings.module_sys_dmail_html" resname="settings.module_sys_dmail_html">
 				<source>Subscribe to a HTML-newsletter?</source>
 				<target>Iscrizione alla newsletter in formato HTML?</target>
-			</trans-unit>
-			<trans-unit id="settings.module_sys_dmail_category" resname="settings.module_sys_dmail_category">
-				<source>UIDs of the direct-mail-categories (direct-mail) OR fe_groups (luxletter), e.g. 3,4</source>
-				<target>UID di module_sys_dmail_category (direct-mail) O fe_groups (luxletter)</target>
 			</trans-unit>
 			<trans-unit id="parameters" resname="parameters">
 				<source>External parameters</source>
@@ -178,26 +162,6 @@
 			<trans-unit id="settings.parameters.email" resname="settings.parameters.email">
 				<source>Input-field name for the email-address (e.g. tx_myshop_pi1|newBestellung|email)</source>
 				<target>Nome del campo di input per l'indirizzo e-mail (p.e. tx_myshop_pi1|newBestellung|email)</target>
-			</trans-unit>
-			<trans-unit id="dashboard.widget.fixpunktRecentLogEntries.title" resname="dashboard.widget.fixpunktRecentLogEntries.title">
-				<source>fp_newsletter: recent 7 log entries</source>
-				<target>fp_newsletter: 7 voci di registro recenti</target>
-			</trans-unit>
-			<trans-unit id="dashboard.widget.fixpunktRecentLogEntries.description" resname="dashboard.widget.fixpunktRecentLogEntries.description">
-				<source>Shows date, name, email and status of the last entries</source>
-				<target>Mostra la data, il nome, l'e-mail e lo stato delle ultime voci</target>
-			</trans-unit>
-			<trans-unit id="dashboard.widget.fixpunktLogStatus.title" resname="dashboard.widget.fixpunktLogStatus.title">
-				<source>fp_newsletter: status diagram</source>
-				<target>fp_newsletter: grafico di stato</target>
-			</trans-unit>
-			<trans-unit id="dashboard.widget.fixpunktLogStatus.description" resname="dashboard.widget.fixpunktLogStatus.description">
-				<source>Shows how often a status occurs</source>
-				<target>Mostra la frequenza con cui si verifica uno stato</target>
-			</trans-unit>
-			<trans-unit id="dashboard.widget.fixpunktLogStatus.label" resname="dashboard.widget.fixpunktLogStatus.label">
-				<source>Status code, count</source>
-				<target>Numero</target>
 			</trans-unit>
 		</body>
 	</file>
